Fixed spacing2

--- a/css/style.css
+++ b/css/style.css
@@ -3961,7 +3961,7 @@ figcaption {
   display: flex;
   max-width: 100%;
   margin-top: 32px;
-  margin-bottom: 32px;
+  margin-bottom: -64px;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
